#pragma once

namespace QPS {
enum class AttrNameType { NAME, INTEGER, NONE };
}
