#pragma once

namespace QPS {
enum class ExprSpecType { EXPR, WILDCARD, WILDCARD_EXPR, INVALID };
}
