#pragma once

namespace QPS {
enum class SynonymType {
  STMT,
  READ,
  PRINT,
  CALL,
  WHILE,
  IF,
  ASSIGN,
  VARIABLE,
  CONSTANT,
  PROCEDURE,
  INVALID
};
}  // namespace QPS
